set(FSRCS mpi_stubs.f)
set(CSRCS mpi_stubs_c.c)

if(SV_USE_THREEDSOLVER_SHARED_LIBRARIES)
  ADD_LIBRARY(lib_fortran_simvascular_dummympi SHARED ${FSRCS})
  ADD_LIBRARY(lib_extra_simvascular_dummympi SHARED ${CSRCS})
else()
  ADD_LIBRARY(lib_fortran_simvascular_dummympi STATIC ${FSRCS})
  ADD_LIBRARY(lib_extra_simvascular_dummympi STATIC ${CSRCS})
endif()
