set(lib ${SVLS_LIBRARY})


SET(FSRCS ADDBCMUL.f
		BC.f
		#BICGS.f
		CGRAD.f
		COMMU.f
		CPUT.f
		DOT.f
		GE.f
		GMRES.f
		INCOMMU.f
		LHS.f
		LS.f
		NORM.f
		NSSOLVER.f
		#OMPLA.f
		PRECOND.f
		SOLVE.f
		SPARMUL.f)


add_library(${lib} ${FSRCS})

if(SIMVASCULAR_INSTALL_LIBS)
	install(TARGETS ${lib}
		RUNTIME DESTINATION ${SIMVASCULAR_INSTALL_RUNTIME_DIR} COMPONENT ModuleExecutables
		LIBRARY DESTINATION ${SIMVASCULAR_INSTALL_LIBRARY_DIR} COMPONENT ModuleLibraries
		ARCHIVE DESTINATION ${SIMVASCULAR_INSTALL_ARCHIVE_DIR} COMPONENT ModuleLibraries
		)
endif()
if(SIMVASCULAR_INSTALL_HEADERS)
	install(FILES ${HDRS}
		DESTINATION ${SIMVASCULAR_INSTALL_INCLUDE_DIR}/core COMPONENT CoreHeaders
		)
endif()



